--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 com CCS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima accusantium non deserunt quaerat vero, quas facilis magni, labore, at blanditiis perferendis nulla rerum dolorum! Iste iusto recusandae voluptate neque facere!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam tempore atque, similique et neque illum perferendis. Delectus, quasi cupiditate? Quae aliquam dolore delectus quis sed explicabo provident nihil laborum nobis.</p>
         </article>
     </main>    
 </body>
