--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
             <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Curso de HTML5 com CCS3</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima accusantium non deserunt quaerat vero, quas facilis magni, labore, at blanditiis perferendis nulla rerum dolorum! Iste iusto recusandae voluptate neque facere!</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <img  class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam tempore atque, similique et neque illum perferendis. Delectus, quasi cupiditate? Quae aliquam dolore delectus quis sed explicabo provident nihil laborum nobis.</p>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>    
 </body>
