--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
             <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>    
+    <p>Desenvolvido durante o curso de Git - GitHub do curso em vídeo</p>
 </body>
 </html>
