--- a/curso-js.html
+++ b/curso-js.html
@@ -19,5 +19,6 @@
             <a href="index.html"><img src="imagens/btn-back.png" alt="Voltar"></a>
         </article>
     </main>
+    <p>Desenvolvido durante o curso de Git - GitHub do curso em vídeo</p>
 </body>
 </html>
