--- a/curso-html.html
+++ b/curso-html.html
@@ -20,5 +20,6 @@
             
         </article>
     </main>
+    <p>Desenvolvido durante o curso de Git - GitHub do curso em vídeo</p>
 </body>
 </html>
